--- a/project.ipynb
+++ b/project.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +61,8 @@
     }
    ],
    "source": [
-    "control_path = r'C:\\Users\\anand\\OneDrive\\Desktop\\school_vscode\\cogs 118b\\cogs118c-project\\Control_EEG_sub_027.npy'\n",
-    "ad_path = r'C:\\Users\\anand\\OneDrive\\Desktop\\school_vscode\\cogs 118b\\cogs118c-project\\AD_EEG_sub_001.npy'\n",
+    "control_path = r'C:\\Users\\anand\\OneDrive\\Desktop\\school_vscode\\cogs 118c\\cogs118c-project\\Control_EEG_sub_027.npy'\n",
+    "ad_path = r'C:\\Users\\anand\\OneDrive\\Desktop\\school_vscode\\cogs 118c\\cogs118c-project\\AD_EEG_sub_001.npy'\n",
     "\n",
     "Control = np.load(control_path)\n",
     "AD = np.load(ad_path)\n",
