--- a/project.ipynb
+++ b/project.ipynb
@@ -40,8 +40,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code plots the EEG time series for three channels (Fp1, Fp2, F3) from the processed control sample, displaying the signals over a 20-second interval."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -56,19 +63,18 @@
     }
    ],
    "source": [
-    "fs = 500  # Sampling rate (Hz)\n",
-    "num_samples = processed_Control.shape[1]  # 10000 samples\n",
+    "fs = 500  \n",
+    "num_samples = processed_Control.shape[1]  \n",
     "\n",
     "time = np.linspace(0, num_samples / fs, num_samples)\n",
     "\n",
     "channels = ['Fp1', 'Fp2', 'F3']\n",
-    "colors = ['r', 'g', 'b']  # Red, Green, Blue\n",
+    "colors = ['r', 'g', 'b']  \n",
     "\n",
     "plt.figure(figsize=(12, 5))\n",
     "for i in range(3):\n",
     "    plt.plot(time, processed_Control[i, :], label=channels[i], color=colors[i])\n",
     "\n",
-    "# Formatting\n",
     "plt.xlim(0,20)\n",
     "plt.xlabel(\"Time (seconds)\")\n",
     "plt.ylabel(\"EEG Signal (µV)\")\n",
@@ -76,13 +82,19 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "\n",
-    "# Show plot\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code plots the EEG time series for three channels (Fp1, Fp2, F3) from the processed AD sample, displaying the signals over a 20-second interval."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,19 +109,18 @@
     }
    ],
    "source": [
-    "fs = 500  # Sampling rate (Hz)\n",
-    "num_samples = processed_AD.shape[1]  # 10000 samples\n",
+    "fs = 500  \n",
+    "num_samples = processed_AD.shape[1]  \n",
     "\n",
     "time = np.linspace(0, num_samples / fs, num_samples)\n",
     "\n",
     "channels = ['Fp1', 'Fp2', 'F3']\n",
-    "colors = ['r', 'g', 'b']  # Red, Green, Blue\n",
+    "colors = ['r', 'g', 'b']  \n",
     "\n",
     "plt.figure(figsize=(12, 5))\n",
     "for i in range(3):\n",
     "    plt.plot(time, processed_AD[i, :], label=channels[i], color=colors[i])\n",
     "\n",
-    "# Formatting\n",
     "plt.xlim(0,20)\n",
     "plt.xlabel(\"Time (seconds)\")\n",
     "plt.ylabel(\"EEG Signal (µV)\")\n",
@@ -117,13 +128,19 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "\n",
-    "# Show plot\n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code plots the Power Spectral Density (PSD) of EEG signals for both AD and Control groups across three channels (Fp1, Fp2, F3), comparing the power in the theta and gamma frequency bands."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,16 +158,16 @@
     "def plot_psd(signal, fs,condition, line_style,color):\n",
     "    \"\"\"Plots absolute power in theta/gamma bands between control and AD groups for all subjects.\"\"\"\n",
     "    freqs, psd = welch(signal, fs=fs, window='hann', nperseg=500, noverlap=250, scaling='density') # We use Welches\n",
-    "     # Convert to dB  and plot\n",
+    "    \n",
+    "    # Convert to dB  and plot\n",
     "    plt.plot(freqs, 10 * np.log10(psd), label=condition, linestyle=line_style, color=color)\n",
-    "    plt.xlim(0, 100)  # Keep in range\n",
+    "    plt.xlim(0, 100)  \n",
     "    plt.ylim(-100, 30)\n",
     "    plt.xlabel('Frequency (Hz)')\n",
     "    plt.ylabel('Power Spectral Density (dB/Hz)')\n",
     "    plt.title('EEG Power Spectrum: AD vs. Control')\n",
     "    plt.grid(True)\n",
     "\n",
-    "# Parameters \n",
     "fs = 500             # Sampling rate\n",
     "theta_band = (4, 8)  # Theta frequency range\n",
     "gamma_band = (30, 100) # Gamma frequency range \n",
@@ -169,19 +186,26 @@
     "for i in range(processed_Control.shape[0]):\n",
     "    plot_psd(processed_Control[i, :], fs, condition=f\"Control {channels[i]}\", line_style='--', color=control_color[i])\n",
     "\n",
-    "plt.legend()  # Add legend to distinguish AD and Control\n",
+    "plt.legend()  \n",
     "plt.show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code applies a Butterworth bandpass filter to the EEG signals for both AD and Control groups, extracting the theta (4-8 Hz) and gamma (30-100 Hz) frequency bands for each channel (Fp1, Fp2, F3)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# bandass filtering for theta and gamma \n",
-    "\n",
     "def bandpass_filter(data, lowcut, highcut, fs, order=4):\n",
+    "\n",
     "    \"\"\"Butterworth bandpass filter\"\"\"\n",
     "    nyq = 0.5 * fs\n",
     "    low = lowcut / nyq\n",
@@ -205,6 +229,13 @@
     "    theta_data = bandpass_filter(processed_Control[i, :], theta_band[0], theta_band[1], fs)\n",
     "    gamma_data = bandpass_filter(processed_Control[i, :], gamma_band[0], gamma_band[1], fs)\n",
     "    control_filtered.append((channels[i], theta_data, gamma_data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code computes the absolute and relative power of the theta (4-8 Hz) and gamma (30-100 Hz) frequency bands for both AD and Control groups using the Welch method and stores the results in a dictionary."
    ]
   },
   {
@@ -277,6 +308,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code visualizes the relative power of theta and gamma bands for AD and Control groups using boxplots, and calculates the average relative power for both groups."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
@@ -343,28 +381,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 226,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# def plot_subject_power(results_ad, results_ctrl, band_name):\n",
-    "#     plt.figure(figsize=(10, 4))\n",
-    "#     # AD Subject\n",
-    "#     plt.subplot(121)\n",
-    "#     plt.bar(channels, results_ad, color='red', alpha=0.7)\n",
-    "#     plt.title(f'AD Subject: {band_name} Relative Power')\n",
-    "#     plt.ylabel('Power')\n",
-    "#     # Control Subject\n",
-    "#     plt.subplot(122)\n",
-    "#     plt.bar(channels, results_ctrl, color='blue', alpha=0.7)\n",
-    "#     plt.title(f'Control Subject: {band_name} Relative Power')\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.show()\n",
-    "\n",
-    "# # Plot theta/gamma relative power for AD vs. Control\n",
-    "# plot_subject_power(results['AD_theta_rel'], results['CTRL_theta_rel'], 'Theta')\n",
-    "# plot_subject_power(results['AD_gamma_rel'], results['CTRL_gamma_rel'], 'Gamma')"
+    "This code generates bar plots to compare the relative power of theta and gamma bands between AD and Control groups across three channels (Fp1, Fp2, F3)."
    ]
   },
   {
@@ -432,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
